traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: Boolean does not take parameters
override def run() {def positionFinale() {if (estFaceMur()(&&getDirection()==Direction.EST)) {gauche();return estFaceMur()}
                                                          ^Snake:1: warning: enclosing method positionFinale has result type Unit: return value discarded
override def run() {def positionFinale() {if (estFaceMur()(&&getDirection()==Direction.EST)) {gauche();return estFaceMur()}
                                                                                                       ^Snake:2: warning: enclosing method positionFinale has result type Unit: return value discarded
                                           if (estFaceMur()&&(getDirection()==Direction.OUEST)) {droite();return estFaceMur()}
                                                                                                          ^Snake:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                          else {return false}}
                                                       ^Snake:3: warning: enclosing method positionFinale has result type Unit: return value discarded
                                          else {return false}}
                                                ^Snake:4: error: value unary_! is not a member of Unit
                    def marche() {while (!positionFinale) 
                                         ^Snake:5: error: not found: value etDirection
                                  {if (estFaceMur()&&etDirection()==Direction.EST) {gauche();}
                                                     ^Snake:6: error: not found: value etDirection
                                   if (estFaceMur()&&etDirection()==Direction.OUEST) {droite();}
                                                     ^